// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSButtonGroup Checkbox 1`] = `
<div
  className="slds-p-around_medium"
>
  <fieldset
    className="slds-form-element"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      Scheduled Day(s)
    </legend>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-checkbox_button-group"
        id="button-group-checkbox"
      >
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            id="ButtonGroupExampleMon"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleMon"
          >
            <span
              className="slds-checkbox_faux"
            >
              Mon
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            id="ButtonGroupExampleTue"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleTue"
          >
            <span
              className="slds-checkbox_faux"
            >
              Tue
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            id="ButtonGroupExampleWed"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleWed"
          >
            <span
              className="slds-checkbox_faux"
            >
              Wed
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            id="ButtonGroupExampleThu"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleThu"
          >
            <span
              className="slds-checkbox_faux"
            >
              Thu
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            id="ButtonGroupExampleFri"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleFri"
          >
            <span
              className="slds-checkbox_faux"
            >
              Fri
            </span>
          </label>
        </span>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`DOM snapshots SLDSButtonGroup Checkbox Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <fieldset
    className="slds-form-element slds-has-error"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      Scheduled Day(s)
    </legend>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-checkbox_button-group"
        id="button-group-checkbox-error"
      >
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            aria-describedby="button-group-error-button-group-checkbox-error"
            id="ButtonGroupExampleMon"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleMon"
          >
            <span
              className="slds-checkbox_faux"
            >
              Mon
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            aria-describedby="button-group-error-button-group-checkbox-error"
            id="ButtonGroupExampleTue"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleTue"
          >
            <span
              className="slds-checkbox_faux"
            >
              Tue
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            aria-describedby="button-group-error-button-group-checkbox-error"
            id="ButtonGroupExampleWed"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleWed"
          >
            <span
              className="slds-checkbox_faux"
            >
              Wed
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            aria-describedby="button-group-error-button-group-checkbox-error"
            id="ButtonGroupExampleThu"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleThu"
          >
            <span
              className="slds-checkbox_faux"
            >
              Thu
            </span>
          </label>
        </span>
        <span
          className="slds-button slds-checkbox_button"
        >
          <input
            aria-describedby="button-group-error-button-group-checkbox-error"
            id="ButtonGroupExampleFri"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox_button__label"
            htmlFor="ButtonGroupExampleFri"
          >
            <span
              className="slds-checkbox_faux"
            >
              Fri
            </span>
          </label>
        </span>
      </div>
      <div
        className="slds-form-element__help"
        id="button-group-error-button-group-checkbox-error"
      >
        This field is required
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`DOM snapshots SLDSButtonGroup Icon Group 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-button-group"
    id="button-group-icon-group-1"
    role="group"
  >
    <button
      aria-live="polite"
      className="slds-button slds-not-selected slds-button_icon-border"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon_stateful"
      >
        <use
          href="/assets/icons/utility-sprite/svg/symbols.svg#chart"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Show Chart
      </span>
    </button>
    <button
      aria-live="polite"
      className="slds-button slds-not-selected slds-button_icon-border"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon slds-button__icon_stateful"
      >
        <use
          href="/assets/icons/utility-sprite/svg/symbols.svg#filterList"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Filter List
      </span>
    </button>
    <div
      className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
      id="icon-dropdown-example-1"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={null}
      onMouseLeave={null}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="slds-button slds-button_icon-more ignore-click-icon-dropdown-example-1"
        disabled={false}
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
          />
        </svg>
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-button__icon_x-small"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#down"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Settings
        </span>
      </button>
    </div>
  </div>
  <br />
  <br />
  <fieldset
    className="slds-form-element"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      Actions
    </legend>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-button-group"
        id="button-group-icon-group-2"
        role="group"
      >
        <button
          aria-live="polite"
          className="slds-button slds-not-selected slds-button_icon-border"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon slds-button__icon_stateful"
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#chart"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Show Chart
          </span>
        </button>
        <button
          aria-live="polite"
          className="slds-button slds-not-selected slds-button_icon-border"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon slds-button__icon_stateful"
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#filterList"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Filter List
          </span>
        </button>
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
          id="icon-dropdown-example-2"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={null}
          onMouseLeave={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="slds-button slds-button_icon-more ignore-click-icon-dropdown-example-2"
            disabled={false}
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#settings"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="slds-button__icon slds-button__icon_x-small"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#down"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Settings
            </span>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`DOM snapshots SLDSButtonGroup List Variant 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-button-group-list"
    id="button-group-list-1"
  >
    <li>
      <button
        className="slds-button slds-button_neutral"
        disabled={false}
        id="refresh-button-1"
        onClick={[Function]}
        type="button"
      >
        Refresh
      </button>
    </li>
    <li>
      <button
        className="slds-button slds-button_neutral"
        disabled={false}
        id="edit-button-1"
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
    </li>
    <li>
      <div
        className="slds-dropdown-trigger slds-dropdown-trigger_click"
        id="options-1"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={null}
        onMouseLeave={null}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="slds-button slds-button_icon-border-filled ignore-click-options-1"
          disabled={false}
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon"
          >
            <use
              href="/assets/icons/utility-sprite/svg/symbols.svg#down"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            More Options
          </span>
        </button>
      </div>
    </li>
  </ul>
  <br />
  <br />
  <fieldset
    className="slds-form-element custom-container-class"
  >
    <legend
      className="slds-form-element__legend slds-form-element__label"
    >
      Actions
    </legend>
    <div
      className="slds-form-element__control"
    >
      <ul
        className="slds-button-group-list"
        id="button-group-list-2"
      >
        <li>
          <button
            className="slds-button slds-button_neutral"
            disabled={false}
            id="refresh-button-2"
            onClick={[Function]}
            type="button"
          >
            Refresh
          </button>
        </li>
        <li>
          <button
            className="slds-button slds-button_neutral"
            disabled={false}
            id="edit-button-2"
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </li>
        <li>
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
            id="options-2"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={null}
            onMouseLeave={null}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="slds-button slds-button_icon-border-filled ignore-click-options-2"
              disabled={false}
              onClick={[Function]}
              tabIndex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                More Options
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </fieldset>
</div>
`;

exports[`DOM snapshots SLDSButtonGroup More Icon 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-button-group"
    id="button-group-more-icon"
    role="group"
  >
    <button
      className="slds-button slds-button_neutral"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Refresh
    </button>
    <button
      className="slds-button slds-button_neutral"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <button
      className="slds-button slds-button_neutral"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
    <div
      className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
      id="ButtonGroupExampleDropdown"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={null}
      onMouseLeave={null}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="slds-button slds-button_icon-border-filled ignore-click-ButtonGroupExampleDropdown"
        disabled={false}
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#down"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          More Options
        </span>
      </button>
    </div>
  </div>
</div>
`;
